Fix alignment in organizers

--- a/style.css
+++ b/style.css
@@ -82,16 +82,24 @@ a:hover, a:active {
 	#site-navigation li {
 		float: none;
 		display: inline-block;
+		margin-left: -4px;
 	}
 	#site-navigation li a {
 	    color: #ffffff;
 		padding-bottom:15px;
 	    padding-top: 15px;
 	}
+	#site-navigation li a:hover ,
+	#site-navigation li:hover > a{
+	    background-color: #ce272a;
+	}
 	#site-navigation li li a {
 		color:#2f3436;
 		padding-bottom:10px;
 	    padding-top: 10px;
+	}
+	#site-navigation li li a:hover {
+		color:#FFF;
 	}
 	#site-navigation .menu-item-has-children > a::after {
 		top: 18px;
@@ -107,10 +115,13 @@ a:hover, a:active {
 	#site-navigation li li {
 		text-align: left;
 		display: block;
+		width: 100%;
 	}
-
+	.main-navigation ul ul a {
+		width:100%;
+	}
 	#site-navigation li:hover ul {
-		left: 0;
+		left: 4px;
 		min-width: 200px;
 	}
 	#site-navigation li li:hover ul {
@@ -146,4 +157,9 @@ a:hover, a:active {
 	.site-header-main {
 		margin-bottom: 15px;
 	}
+}
+
+.page-slug-organizers .wcorg-organizer img {
+	margin-right: 15px;
+	float: left;
 }
